--- a/plus.html
+++ b/plus.html
@@ -13,8 +13,7 @@
 	<div id="container" 
 		data-shape="plus" 
 		data-distortion="4" 
-		data-color="amber" 
-		data-showsettings 
+		data-color="dark" 
 		data-speed="1"
 	></div>
 	<script src="js/app.js"></script>
