--- a/sphube.html
+++ b/sphube.html
@@ -11,10 +11,9 @@
 </head>
 <body>
 	<div id="container" 
-		data-shape="plus" 
+		data-shape="dark" 
 		data-distortion="4" 
 		data-color="amber" 
-		data-showsettings 
 		data-speed="1"
 	></div>
 	<script src="js/app.js"></script>
