--- a/torus.html
+++ b/torus.html
@@ -11,10 +11,9 @@
 </head>
 <body>
 	<div id="container" 
-		data-shape="plus" 
+		data-shape="torus" 
 		data-distortion="4" 
-		data-color="amber" 
-		data-showsettings 
+		data-color="cherry" 
 		data-speed="1"
 	></div>
 	<script src="js/app.js"></script>
