--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Rotating Loading Animation of 3D Shapes | Demo 1 | Codrops</title>
+		<title>Rotating Loading Animation of 3D Shapes | Demo 4 | Codrops</title>
 		<meta name="description" content="Rotating Loading Animation of 3D Shapes with Three.js" />
 		<meta name="keywords" content="three.js, webgl, animation, loading, 3d, rotation, twisted" />
 		<meta name="author" content="Codrops" />
@@ -12,15 +12,15 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
-	<body class="demo-1">
+	<body class="demo-4">
 		<div class="frame">
 			<h1 class="frame__title">Rotating Loading Animation of 3D Shapes</h1>
 			<div class="frame__demos">
 				<span class="frame__demos-text">More demos:</span>
-				<a class="frame__demo frame__demo--current" href="index.html">Plus</a>
+				<a class="frame__demo" href="index.html">Plus</a>
 				<a class="frame__demo" href="sphube.html">Sphube</a>
 				<a class="frame__demo" href="torus.html">Torus</a>
-				<a class="frame__demo" href="config.html">Config</a>
+				<a class="frame__demo frame__demo--current" href="config.html">Config</a>
 			</div>
 			<div class="frame__links">
 				<a href="https://tympanus.net/Tutorials/WebGLBlobs/">Previous demo</a>
@@ -31,7 +31,8 @@
 		<div id="container" 
 		data-shape="plus" 
 		data-distortion="4" 
-		data-color="dark" 
+		data-color="amber" 
+		data-showsettings 
 		data-speed="1"></div>
 		<script src="js/app.js"></script>
 	</body>
