--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Rotating Loading Animation of 3D Shapes | Demo 4 | Codrops</title>
+		<title>Rotating Loading Animation of 3D Shapes | Config | Codrops</title>
 		<meta name="description" content="Rotating Loading Animation of 3D Shapes with Three.js" />
 		<meta name="keywords" content="three.js, webgl, animation, loading, 3d, rotation, twisted" />
 		<meta name="author" content="Codrops" />
