--- a/sphube.html
+++ b/sphube.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<div id="container" 
-		data-shape="dark" 
+		data-shape="sphube" 
 		data-distortion="4" 
 		data-color="amber" 
 		data-speed="1"></div>
