--- a/config.html
+++ b/config.html
@@ -31,7 +31,7 @@
 		<div id="container" 
 		data-shape="plus" 
 		data-distortion="4" 
-		data-color="amber" 
+		data-color="soul" 
 		data-showsettings 
 		data-speed="1"></div>
 		<script src="js/app.js"></script>
