--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="container" 
 		data-shape="plus" 
 		data-distortion="4" 
-		data-color="dark" 
+		data-color="special" 
 		data-speed="1"></div>
 		<script src="js/app.js"></script>
 	</body>
