--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
+	</head>
 	<body class="demo-1">
 		<div class="frame">
 			<h1 class="frame__title">Rotating Loading Animation of 3D Shapes</h1>
@@ -30,8 +31,8 @@
 		</div>
 		<div id="container" 
 		data-shape="plus" 
-		data-distortion="4" 
-		data-color="special" 
+		data-distortion="5.5" 
+		data-color="cherry" 
 		data-speed="1"></div>
 		<script src="js/app.js"></script>
 	</body>
