--- a/torus.html
+++ b/torus.html
@@ -31,7 +31,7 @@
 		<div id="container" 
 		data-shape="torus" 
 		data-distortion="4" 
-		data-color="cherry" 
+		data-color="soul" 
 		data-speed="1"></div>
 		<script src="js/app.js"></script>
 	</body>
